@@ -16,9 +16,11 @@ import be.jidoka.jdk.keycloak.admin.domain.UserAction;
 import be.jidoka.jdk.keycloak.admin.domain.UserPersonalDataCommand;
 import org.apache.commons.lang3.StringUtils;
 import org.keycloak.admin.client.resource.ClientsResource;
+import org.keycloak.admin.client.resource.GroupResource;
+import org.keycloak.admin.client.resource.GroupsResource;
 import org.keycloak.admin.client.resource.RolesResource;
-import org.keycloak.admin.client.resource.UserResource;
 import org.keycloak.admin.client.resource.UsersResource;
+import org.keycloak.representations.idm.GroupRepresentation;
 import org.keycloak.representations.idm.RoleRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
 import org.springframework.data.domain.Page;
@@ -26,6 +28,7 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -34,11 +37,11 @@ import java.util.Set;
 import java.util.function.IntSupplier;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static be.jidoka.jdk.keycloak.admin.domain.User.PICTURE_URL_ATTRIBUTE;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
 import static org.keycloak.admin.client.CreatedResponseUtil.getCreatedId;
 
 public class KeycloakUserAdminService {
@@ -46,16 +49,18 @@ public class KeycloakUserAdminService {
 	private final UsersResource usersResource;
 	private final ClientsResource clientsResource;
 	private final RolesResource rolesResource;
+	private final GroupsResource groupsResource;
 
-	public KeycloakUserAdminService(UsersResource usersResource, ClientsResource clientsResource, RolesResource rolesResource) {
+	public KeycloakUserAdminService(UsersResource usersResource, ClientsResource clientsResource, RolesResource rolesResource, GroupsResource groupsResource) {
 		this.usersResource = usersResource;
 		this.clientsResource = clientsResource;
 		this.rolesResource = rolesResource;
+		this.groupsResource = groupsResource;
 	}
 
 	public Page<User> getUsers(GetUsersRequest request) {
-		Pageable pageable = request.getPageable();
-		String clientId = request.getClientId().orElse(null);
+		var pageable = request.getPageable();
+		var clientId = request.getClientId().orElse(null);
 
 		return retrieveUsers(
 				() -> usersResource.list(getPage(pageable), getPageSize(pageable)),
@@ -66,8 +71,8 @@ public class KeycloakUserAdminService {
 	}
 
 	public Page<User> searchUsers(SearchUserRequest request) {
-		Pageable pageable = request.getPageable();
-		String clientId = request.getClientId().orElse(null);
+		var pageable = request.getPageable();
+		var clientId = request.getClientId().orElse(null);
 
 		return retrieveUsers(
 				() -> usersResource.search(request.getSearch(), getPage(pageable), getPageSize(pageable)),
@@ -78,20 +83,45 @@ public class KeycloakUserAdminService {
 	}
 
 	public Set<User> searchUsersByClientRole(SearchUserByClientRoleRequest request) {
-		return clientsResource.get(request.getClientId()).roles()
-				.get(request.getRoleName())
-				.getRoleUserMembers()
-				.stream()
+		return Stream.concat(
+						getUserRepresentationsWithExplicitRole(request),
+						getUserRepresentationsWithImplicitRole(request)
+				)
 				.map(user -> enhanceWithClientRoles(user, request.getClientId()))
 				.map(user -> new User(user, request.getClientId()))
 				.collect(Collectors.toSet());
 	}
 
+	private Stream<UserRepresentation> getUserRepresentationsWithExplicitRole(SearchUserByClientRoleRequest request) {
+		var clientId = request.getClientId();
+		var roleName = request.getRoleName();
+		var clientRoles = clientsResource.get(clientId).roles();
+
+		if (clientRoles.list().stream().anyMatch(roleRepresentation -> roleRepresentation.getName().equals(roleName))) {
+			return clientRoles.get(roleName)
+					.getRoleUserMembers()
+					.stream();
+		}
+
+		return Stream.empty();
+	}
+
+	private Stream<UserRepresentation> getUserRepresentationsWithImplicitRole(SearchUserByClientRoleRequest request) {
+		return groupsResource.groups()
+				.stream()
+				.map(groupRepresentation -> enhanceWithClientRoles(groupRepresentation, request.getClientId()))
+				.filter(groupRepresentation -> groupRepresentation.getClientRoles().get(request.getClientId()).contains(request.getRoleName()))
+				.toList().stream()
+				.map(groupRepresentation -> groupsResource.group(groupRepresentation.getId()))
+				.map(GroupResource::members)
+				.flatMap(Collection::stream);
+	}
+
 	public Set<User> searchUsersByRealmRole(SearchUserByRealmRoleRequest request) {
-		int page = 0;
-		int pageSize = 100;
+		var page = 0;
+		var pageSize = 100;
 		int currentPageSize;
-		Set<UserRepresentation> roleUserMembers = new HashSet<>();
+		var roleUserMembers = new HashSet<UserRepresentation>();
 
 		do {
 			Pageable pageable = PageRequest.of(page, pageSize);
@@ -108,15 +138,15 @@ public class KeycloakUserAdminService {
 	}
 
 	public User getUser(GetUserRequest request) {
-		String clientId = request.getClientId().orElse(null);
-		UserResource userResource = usersResource.get(request.getUserId());
-		UserRepresentation userRepresentation = enhanceWithClientRoles(userResource.toRepresentation(), clientId);
+		var clientId = request.getClientId().orElse(null);
+		var userResource = usersResource.get(request.getUserId());
+		var userRepresentation = enhanceWithClientRoles(userResource.toRepresentation(), clientId);
 
 		return new User(userRepresentation, clientId);
 	}
 
 	public String createUser(CreateUserCommand command) {
-		UserRepresentation userRepresentation = new UserRepresentation();
+		var userRepresentation = new UserRepresentation();
 		userRepresentation.setEnabled(command.isEnabled());
 		userRepresentation.setUsername(command.getUsername());
 		userRepresentation.setFirstName(command.getFirstName());
@@ -139,7 +169,7 @@ public class KeycloakUserAdminService {
 	 * Otherwise this will be silently discarded, no update on this field.
 	 */
 	public void updateUser(UpdateUserCommand command) {
-		UserRepresentation userRepresentation = new UserRepresentation();
+		var userRepresentation = new UserRepresentation();
 		command.getEnabled().ifPresent(userRepresentation::setEnabled);
 		command.getUsername().ifPresent(userRepresentation::setUsername);
 		command.getFirstName().ifPresent(userRepresentation::setFirstName);
@@ -148,7 +178,7 @@ public class KeycloakUserAdminService {
 		userRepresentation.setAttributes(getPersonalData(command));
 		userRepresentation.setRequiredActions(getActions(command.getRequiredUserActions()));
 
-		UserResource userResource = usersResource.get(command.getUserId());
+		var userResource = usersResource.get(command.getUserId());
 
 		userResource.update(userRepresentation);
 	}
@@ -159,19 +189,19 @@ public class KeycloakUserAdminService {
 	 * @throws javax.ws.rs.InternalServerErrorException when SMTP is not configured or accessible.
 	 */
 	public void sendUserActionEmails(SendUserActionEmailRequest request) {
-		UserResource userResource = usersResource.get(request.getUserId());
+		var userResource = usersResource.get(request.getUserId());
 
 		userResource.executeActionsEmail(getActions(request.getUserActions()));
 	}
 
 	public void addRealmRoleToUser(AddRealmRoleToUserCommand command) {
-		RoleRepresentation realmRole = rolesResource.get(command.getRoleName())
+		var realmRole = rolesResource.get(command.getRoleName())
 				.toRepresentation();
 		usersResource.get(command.getUserId()).roles().realmLevel().add(singletonList(realmRole));
 	}
 
 	public void addClientRoleToUser(AddClientRoleToUserCommand command) {
-		RoleRepresentation clientRole = clientsResource.get(command.getClientId())
+		var clientRole = clientsResource.get(command.getClientId())
 				.roles()
 				.get(command.getRoleName())
 				.toRepresentation();
@@ -183,7 +213,7 @@ public class KeycloakUserAdminService {
 	}
 
 	public void removeClientRoleFromUser(RemoveClientRoleFromUserCommand command) {
-		RoleRepresentation clientRole = clientsResource.get(command.getClientId())
+		var clientRole = clientsResource.get(command.getClientId())
 				.roles()
 				.get(command.getRoleName())
 				.toRepresentation();
@@ -195,7 +225,7 @@ public class KeycloakUserAdminService {
 	}
 
 	public void deleteUser(String userId) {
-		UserResource user = usersResource.get(userId);
+		var user = usersResource.get(userId);
 
 		user.remove();
 	}
@@ -213,25 +243,25 @@ public class KeycloakUserAdminService {
 	}
 
 	private Page<User> retrieveUsers(Supplier<List<UserRepresentation>> userRepresentations, IntSupplier userCount, String clientId, Pageable pageable) {
-		List<User> users = userRepresentations.get()
+		var users = userRepresentations.get()
 				.stream()
 				.map(userRepresentation -> enhanceWithClientRoles(userRepresentation, clientId))
 				.map(userRepresentation -> new User(userRepresentation, clientId))
-				.collect(toList());
+				.toList();
 		int total = userCount.getAsInt();
 
 		return new PageImpl<>(users, pageable, total);
 	}
 
 	private UserRepresentation enhanceWithRealmRoles(UserRepresentation userRepresentation) {
-		UserResource userResource = usersResource.get(userRepresentation.getId());
-		List<RoleRepresentation> roleRepresentations = userResource.roles().realmLevel().listEffective();
-		UserRepresentation userWithRoles = userResource.toRepresentation();
+		var userResource = usersResource.get(userRepresentation.getId());
+		var roleRepresentations = userResource.roles().realmLevel().listEffective();
+		var userWithRoles = userResource.toRepresentation();
 
 		userWithRoles.setRealmRoles(
 				roleRepresentations.stream()
 						.map((RoleRepresentation::getName))
-						.collect(Collectors.toUnmodifiableList())
+						.toList()
 		);
 
 		return userWithRoles;
@@ -243,21 +273,35 @@ public class KeycloakUserAdminService {
 			return userRepresentation;
 		}
 
-		UserResource userResource = usersResource.get(userRepresentation.getId());
-		List<RoleRepresentation> clientRoles = userResource.roles().clientLevel(clientId).listEffective();
-		UserRepresentation userWithRoles = userResource.toRepresentation();
+		var userResource = usersResource.get(userRepresentation.getId());
+		var clientRoles = userResource.roles().clientLevel(clientId).listEffective();
+		var userWithRoles = userResource.toRepresentation();
 
 		userWithRoles.setClientRoles(
 				Map.of(clientId, clientRoles.stream()
 						.map(RoleRepresentation::getName)
-						.collect(Collectors.toList()))
+						.toList())
 		);
 
 		return userWithRoles;
 	}
 
+	private GroupRepresentation enhanceWithClientRoles(GroupRepresentation groupRepresentation, String clientId) {
+		var groupResource = groupsResource.group(groupRepresentation.getId());
+		var clientRoles = groupResource.roles().clientLevel(clientId).listEffective();
+		var groupWithRoles = groupResource.toRepresentation();
+
+		groupWithRoles.setClientRoles(
+				Map.of(clientId, clientRoles.stream()
+						.map(RoleRepresentation::getName)
+						.toList())
+		);
+
+		return groupWithRoles;
+	}
+
 	private Map<String, List<String>> getPersonalData(UserPersonalDataCommand command) {
-		Map<String, List<String>> personalData = new HashMap<>();
+		var personalData = new HashMap<String, List<String>>();
 
 		if (command.getPersonalData() != null) {
 			personalData.putAll(command.getPersonalData());
@@ -277,6 +321,6 @@ public class KeycloakUserAdminService {
 		return userActions
 				.stream()
 				.map(UserAction::name)
-				.collect(toList());
+				.toList();
 	}
 }
